# deployotron

./: .gitignore  ARCHITECTURE.md  BUILD_STATE.json  CHANGELOG.md  CONTEXT.md  FINAL_SUMMARY.md  PROGRESS.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  README_BUILD.md  SHADOW_WORLD_GUIDE.md  TASKS.md  index.html  package.json  vite.config.ts
.github/workflows/: build-release.yml
src/: App.css  App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  models.rs
src-tauri/src/application/: commands.rs  mod.rs  orchestrator.rs
src-tauri/src/infrastructure/: database.rs  keychain.rs  mod.rs
src-tauri/src/services/: aws_service.rs  aws_trait.rs  claude_service.rs  factory.rs  git_service.rs  git_trait.rs  mod.rs  terraform_service.rs
src-tauri/src/shadow/: aws_mock.rs  config.rs  git_mock.rs  mod.rs  state.rs  test_utils.rs
src-tauri/tests/: shadow_integration.rs
src/pages/: Dashboard.css  Dashboard.tsx
