[package]
name = "deployotron"
version = "0.1.0"
description = "DevOps deployment tool with AI assistance"
authors = ["Deployotron Team"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
# Tauri core
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
rusqlite = { version = "0.30", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }

# Security & Credentials
keyring = "2.0"
ring = "0.17"
base64 = "0.21"
dirs = "5.0"

# AWS SDK
aws-config = "1.0"
aws-sdk-ecs = "1.0"
aws-sdk-ecr = "1.0"
aws-sdk-cloudwatchlogs = "1.0"

# Git
git2 = "0.18"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
